feat:edit electricity apis
